--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=springBatchleituraArquivoDelimitado
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_batch
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.batch.jdbc.initialize-schema=always
